--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,16 +7,18 @@ $body-font: 'RobotoMono', monospace;
 $description-font: 'monaco';
 $accent-color: #5eef3d;
 $text-light: #FFFFFF;
-$card-bg: rgba(0, 0, 0, 0.55);
+$card-bg: rgba(0, 0, 0, 0.45);
 $border-radius: 8px;
 
 // Base styles
 html {
   font-size: 62.5%;
-  background: url('../images/capsule.png') no-repeat fixed;
-  background-size: cover;
-  background-color: gray;
+  background: url('../images/capsule.png');
+  background-color: rgba(0, 0, 0, 0.65);
   background-blend-mode: lighten;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: 100%;
 }
 
 body {
@@ -60,8 +62,12 @@ a {
   }
 }
 
-// header/footer sections
-header, footer {
+header {
+  margin-bottom: 25px;
+  border-radius: $border-radius;
+  justify-content: center;
+}
+footer {
   background: $card-bg;
   padding: 25px;
   margin-bottom: 25px;
@@ -79,6 +85,16 @@ body {
   }
 }
 
+.banner-image {
+  object-fit: contain;
+  image-rendering: pixelated;
+  border-radius: $border-radius $border-radius 0 0;
+
+  @media (min-width: 2001px) {
+    flex: 0 0 calc(25% - 15px);
+    max-width: calc(25% - 15px);
+  }
+}
 
 // Content sections
 .content {
@@ -218,7 +234,7 @@ p.description {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
-  justify-content: center; // Changed from center to align from start
+  justify-content: center;
 
   // Create a proper grid layout
   @media (min-width: 2001px) { // 4 items per row for very large screens
@@ -273,15 +289,5 @@ p.description {
 
   @media (max-width: 768px) {
     height: 250px;
-  }
-}
-
-.banner-image {
-  width: 100%;
-  object-fit: cover;
-  border-radius: $border-radius $border-radius 0 0;
-
-  @media (min-width: 768px) {
-    height: 550px;
   }
 }
